@@ -25,8 +25,8 @@ requires 'Lego::Part::Image' => '0.05';
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Task-Lego';
-resources 'homepage' => 'https://github.com/tupinek/Task-Lego';
-resources 'repository' => 'git://github.com/tupinek/Task-Lego';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Task-Lego';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Task-Lego';
 test_requires 'Test::More' => 0;
 test_requires 'Test::NoWarnings' => 0;
 tests_recursive;
