@@ -28,7 +28,7 @@ SEE ALSO
         Lego part image class for lugnet.com.
 
 REPOSITORY
-    <https://github.com/tupinek/Task-Lego>
+    <https://github.com/michal-josef-spacek/Task-Lego>
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
