@@ -3,6 +3,7 @@
  - Fix author test requires.
  - Update to Module::Install 1.21.
  - Update author name.
+ - Update author github name.
  - Update copyright years.
 
 0.03 2015-09-24T00:23:10+02:00
